--- a/src/components/App.css
+++ b/src/components/App.css
@@ -1,7 +1,7 @@
-.preloader{
+.preloader {
     height: 100vh;
     width: 100%;
-    background-image: radial-gradient(circle, #121212, #16161c, #181a27, #191e32, #16223d);
+    background-image: radial-gradient(circle, #000000, #000000, #000000, #000000, #000000);
     color: #fff;
     position: fixed;
     bottom: 0;
@@ -14,7 +14,7 @@
     overflow: hidden;
 }
 
-.preloader .texts-container{
+.preloader .texts-container {
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -27,12 +27,12 @@
     color: #fff;
 }
 
-.blue{
-    color: #2f76af;
+.blue {
+    color: #cf692d;
 }
 
 ::-webkit-scrollbar {
-    width: 9px;
+    width: 12px;
     height: 50px;
     background: linear-gradient(45deg, #243944, #fff);
 }
@@ -45,4 +45,12 @@
 ::-webkit-scrollbar-thumb:hover {
     background: linear-gradient(45deg, #121212, #333331);
     transition: 0.5s;
+}
+.texts-container, span{
+    padding-top: 10px;
+}
+@media screen and (max-width:450px) {
+    .texts-container, span{
+        font-size: 18px;
+    }
 }
