--- a/src/components/NavBar/NavBar.module.css
+++ b/src/components/NavBar/NavBar.module.css
@@ -11,17 +11,18 @@
     transition: 1s;
 }
 
-.header a:hover{
-    color: #2f76af;
+.header a:hover {
+    color: #cf692d;
 }
 
 .links {
     display: flex;
+    transition: 1s;
 }
 
 
 .novidades {
-    color: #2f76af;
+    color: #cf692d;
 }
 
 .black {
@@ -65,8 +66,9 @@ ul {
     right: 10%;
     width: 37px;
     height: 6px;
-    background-color: #2f76af;
+    background-color: #ffffff;
     position: absolute;
+    border-radius: 50%;
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
     transition: 0.5s;
 }
@@ -77,7 +79,7 @@ ul {
     position: absolute;
     width: 37px;
     height: 6px;
-    background-color: #2f76af;
+    background-color: #cf692d;
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
     transition: 0.5s;
 }
@@ -88,7 +90,7 @@ ul {
     position: absolute;
     width: 37px;
     height: 6px;
-    background-color: #2f76af;
+    background-color: #cf692d;
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
     transition: 0.5s;
 }
@@ -100,69 +102,75 @@ ul {
 
 .icon2.iconActive .hamburguer::after {
     top: 0;
-    background-color: #2f76af;
+    background-color: #cf692d;
     transform: rotate(225deg);
     box-shadow: 0 -2px 5px #fff;
 }
 
 .icon2.iconActive .hamburguer::before {
     top: 0;
-    background-color: #2f76af;
+    background-color: #cf692d;
     transform: rotate(135deg);
     box-shadow: 0 -2px 5px rgb(255, 255, 255);
+
 }
 
-.hamburguer {
-    display: none;
-}
-
-@media screen and (max-width: 1030px) {
-    .header {
-        padding: 10px 30px;
-        flex-direction: column;
-        z-index: 99999;
-    }
-
-    .linksClosed {
-        display: none;
-        transition: 1s;
-    }
-
-    .hamburguer {
-        display: flex;
-    }
+.hamburguer:hover {
+    display: flex;
 
     .links2 {
-        display: flex;
-        position: absolute;
-        height: 100vh;
-        right: 0px;
-        top: 0px;
-        flex-direction: column;
-        background-color: #2a2d35;
-        gap: 0;
-        transition: 1s;
+        opacity: 1;
     }
+}
 
-    .links2,
-    ul {
-        padding: 0;
-    }
 
-    li {
-        padding: 5px 20px;
+.header {
+    padding: 0px 30px;
+    flex-direction: column;
+    z-index: 99999;
+}
 
-    }
-
-    .href {
-        width: 100%;
-        padding: 0% 50px;
-    }
-
-    li:hover {
-        background-color: #2f76af;
-    }
+.linksClosed {
+    display: none;
+    transition: 1s;
 
 }
+
+.links2 {
+    display: flex;
+    position: absolute;
+    height: 100vh;
+    right: 0px;
+    top: 0px;
+    flex-direction: column;
+    background-color: #2a2d35;
+    gap: 0;
+    transition: 1s;
+}
+
+.header a:hover {
+    color: #fff;
+}
+
+.links2,
+ul {
+    padding: 0;
+}
+
+li {
+    padding: 5px 20px;
+
+}
+
+.href {
+    width: 100%;
+    padding: 0% 50px;
+}
+
+li:hover {
+    background-color: #cf692d;
+}
+
+
 
 /*===============*/
